--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
    <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
    <link rel="stylesheet" href="css/bootstrap-grid.min.css">
    <link rel="stylesheet" href="css/style.min.css">
-   <title>Document</title>
+   <title>Uber</title>
 </head>
 <body>
    <header>
